libs/core/proc_macros/api_resource/tests/ui/tuple_struct.stderr
error: Unexpected type `int`
 --> tests/ui/tuple_struct.rs:4:29
  |
4 | #[api_resource(collection = 123)]
  |                             ^^^
