libs/core/proc_macros/api_resource/tests/ui/tuple_struct.rs
use core_proc_macros::ApiResource;

#[derive(ApiResource)]
#[api_resource(collection = 123)]
pub struct User {
    id: String,
}

fn main () {}
